--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/customer?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://192.168.43.224:3306/customer?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=123
